<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto">    <item        android:id="@+id/navigation_home"        android:icon="@drawable/home"        android:orderInCategory="100"        android:title="@string/title_home"        app:showAsAction="never"/>    <item        android:id="@+id/navigation_temperature"        android:icon="@drawable/thermometer"        android:orderInCategory="100"        android:title="@string/title_temperature"        app:showAsAction="never"/>    <item        android:id="@+id/navigation_fish"        android:icon="@drawable/fishmnue"        android:orderInCategory="100"        android:title="@string/title_fish"        app:showAsAction="never"/>    <item        android:id="@+id/navigation_light"        android:icon="@drawable/idea"        android:orderInCategory="100"        android:title="@string/title_ambientlight"        app:showAsAction="never"/>    <item        android:id="@+id/navigation_plant"        android:icon="@drawable/rose"        android:orderInCategory="100"        android:title="@string/title_planthight"        app:showAsAction="never"/></menu>